Update retirement calculator

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,12 @@
 
         <section>
             <ul>
-                <li><a href="./investment_calculator.html">View a list of stocks you can order?</a></li>
-                <li><a href="./retirement_calculator.html">Search for stocks?</a></li>
+                <li>
+                    <a href="./investment_calculator.html"
+                        >How much I can make by investing instead of frivolous spending.</a
+                    >
+                </li>
+                <li><a href="./retirement_calculator.html">See how long it will take until I retire.</a></li>
             </ul>
         </section>
     </body>
