Update home page title

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <title>Home Page</title>
     </head>
     <body>
-        <h1>Stock Order and Search</h1>
+        <h1>Investment and Retirement Calculators</h1>
         <section>
             <p>What do you want to do today?</p>
         </section>
