--- a/public/investment_calculator.html
+++ b/public/investment_calculator.html
@@ -22,6 +22,10 @@
             <br />
             <br />
             <section><button type="submit">Submit</button></section>
+            <!-- <p>
+                NOTE: When my teammates micro service is live, the above button will call my teammates micro service to
+                gather historical investment returns
+            </p> -->
         </form>
     </body>
 </html>
